--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
 
-	<title>DIG4503 – Frank FitzGerald - Exam 3</title>
-	<meta name="description" content="DIG4503 Rapid App Web Development - Exam 3">
+	<title>Who's My Rep? – Frank FitzGerald</title>
+	<meta name="description" content="Who's My Rep? - Frank FitzGerald. This webapp allows you to see who you're local representatives are by typing in your zip code.">
 	<meta name="author" content="Frank FitzGerald">
 
 	<meta name="viewport" content="width=device-width">
@@ -35,7 +35,7 @@
 	</div>
 	<div id="footer-container">
 		<footer class="wrapper">
-			Created by Frank FitzGerald for a UCF Digital Media Course
+			Created by <a href="http://frankfitzgerald.net">Frank FitzGerald</a>
 		</footer>
 	</div>
 </body>
